# palace-x

./: .gitignore  .mcp.json  BLUEPRINT_V02.md  CONTRIBUTING.md  Cargo.toml  METAPROMPT_V02.md  NOTICE  Palace-X_SiliconOptimizer.pptx  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/palace-bench/: Cargo.toml
crates/palace-bench/src/: main.rs  sift.rs  sift1m_bench.rs  sift_bench.rs
crates/palace-bitplane/: Cargo.toml
crates/palace-bitplane/src/: degradation.rs  lib.rs  planes.rs  store.rs
crates/palace-cli/: Cargo.toml
crates/palace-cli/src/: main.rs
crates/palace-core/: Cargo.toml
crates/palace-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/palace-engine/: Cargo.toml  DESIGN.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/palace-engine/src/: actor.rs  batch.rs  engine.rs  lib.rs
crates/palace-engine/tests/: e2e_smoke.rs  integration_tests.rs  stress_test.rs
crates/palace-graph/: Cargo.toml
crates/palace-graph/src/: heuristic.rs  hnsw.rs  lib.rs  node.rs  nsw.rs  uma_hnsw.rs
crates/palace-graph/tests/: recall_test.rs
crates/palace-mcp/: Cargo.toml
crates/palace-mcp/src/: main.rs
crates/palace-optimizer/: Cargo.toml
crates/palace-optimizer/examples/: m1_benchmark.rs
crates/palace-optimizer/src/: arena.rs  graphics.rs  lib.rs  metal_batch.rs  metrics.rs  prefetch.rs  simd.rs  thermal.rs  threads.rs
crates/palace-quant/: Cargo.toml
crates/palace-quant/examples/: debug_rabitq.rs
crates/palace-quant/src/: batch.rs  binary.rs  cosine.rs  hamming.rs  lib.rs  rabitq.rs
crates/palace-quant/tests/: integration_tests.rs
crates/palace-storage/: Cargo.toml  README.md
crates/palace-storage/src/: hnsw_rabitq.rs  lib.rs  memory_palace.rs  stats.rs
crates/palace-storage/tests/: edge_cases.rs
crates/palace-topo/: Cargo.toml
crates/palace-topo/src/: betti.rs  ego_cache.rs  ego_graph.rs  lib.rs  metric.rs  persistence.rs  reranker.rs  sheaf.rs
crates/palace-topo/tests/: ablation_study.rs
docs/: index.html
docs/docs/: api.html  architecture.html  quickstart.html
scripts/: pre-commit
