[workspace]
resolver = "2"
members = [
    "crates/palace-core",
    "crates/palace-quant",
    "crates/palace-graph",
    "crates/palace-topo",
    "crates/palace-bitplane",
    "crates/palace-storage",
    "crates/palace-engine",
    "crates/palace-bench",
    "crates/palace-optimizer",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Maksym Dyachenko <max@neirosynth.com>"]
description = "Palace-X: High-performance topological memory engine for autonomous AI agents"
repository = "https://github.com/dyachmx/palace-x"
keywords = ["memory", "agents", "topological", "simd", "retrieval"]
categories = ["algorithms", "data-structures", "science"]

[workspace.dependencies]
palace-core = { path = "crates/palace-core" }
palace-quant = { path = "crates/palace-quant" }
palace-graph = { path = "crates/palace-graph" }
palace-topo = { path = "crates/palace-topo" }
palace-bitplane = { path = "crates/palace-bitplane" }
palace-storage = { path = "crates/palace-storage" }
palace-engine = { path = "crates/palace-engine" }
palace-optimizer = { path = "crates/palace-optimizer" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rand = "0.8"
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"
rayon = "1.10"
dashmap = "6"
arc-swap = "1"
im = "15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1


[profile.bench]
inherits = "release"
debug = true
