[package]
name = "palace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
palace-storage = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
