[package]
name = "palace-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
palace-core = { workspace = true }
palace-storage = { workspace = true }
palace-optimizer = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
futures = "0.3"

[dev-dependencies]
rand = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
