[package]
name = "palace-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
palace-core = { workspace = true }
palace-quant = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
