[package]
name = "palace-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Palace-X MCP server — exposes palace_search, palace_ingest, palace_stats as MCP tools"

[[bin]]
name = "palace-mcp"
path = "src/main.rs"

[dependencies]
palace-engine = { workspace = true }
palace-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
